first contact with tracker
Signed-off-by: kdufla <george.gvelesiani.a@gmail.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,7 @@
           "kind": "bin"
         }
       },
-      "args": [],
+      "args": ["-f", "resources/38WarBreaker.torrent"],
       "cwd": "${workspaceFolder}"
     },
     {
