--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,13 @@ edition = "2021"
 [dependencies]
 clap = { version = "3.2.16", features = ["derive"] }
 anyhow = "1.0.61"
+serde = { version = "1.0.144", features = ["derive"] }
 bendy = "0.3.3"
 openssl = "0.10.41"
 futures = "0.3.24"
 tokio = { version = "1.20.1", features = ["full"] }
 reqwest = { version = "0.11.11", features = ["json"] }
 urlencoding = "2.1.0"
+bincode = "1.3.3"
+bytes = "1.2.1"
+rand = "0.8.5"
