--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 clap = { version = "3.2.16", features = ["derive"] }
 anyhow = "1.0.61"
 serde = { version = "1.0.144", features = ["derive"] }
-bendy = "0.4.0-beta.2"
+bendy = { version="0.4.0-beta.2",features = ["std", "serde"] }
 openssl = "0.10.41"
 futures = "0.3.24"
 tokio = { version = "1.20.1", features = ["full"] }
