--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,18 +6,22 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "3.2.16", features = ["derive"] }
 anyhow = "1.0.61"
-serde = { version = "1.0.144", features = ["derive"] }
 bendy = { version="0.4.0-beta.2",features = ["std", "serde"] }
-openssl = "0.10.41"
-futures = "0.3.24"
-tokio = { version = "1.20.1", features = ["full"] }
-reqwest = { version = "0.11.11", features = ["json"] }
-urlencoding = "2.1.0"
 bincode = "1.3.3"
 bytes = "1.2.1"
+clap = { version = "4.0.32", features = ["derive"] }
+console-subscriber = "0.1.8"
+futures = "0.3.24"
+openssl = "0.10.41"
 rand = "0.8.5"
+reqwest = { version = "0.11.11", features = ["json"] }
+serde = { version = "1.0.144", features = ["derive"] }
+tokio = { version = "1.23.0", features = ["full", "tracing"] }
+tracing = { version = "0.1.37", features = ["max_level_debug", "release_max_level_warn"] }
+tracing-subscriber = "0.3.16"
+tracing-test = "0.2.3"
+urlencoding = "2.1.0"
 
 [features]
 verbose = []
