--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ bytes = "1.2.1"
 clap = { version = "4.0.32", features = ["derive"] }
 console-subscriber = "0.1.8"
 futures = "0.3.24"
+igd = "0.12.0"
+local-ip-address = "0.5.1"
 openssl = "0.10.41"
 rand = "0.8.5"
 reqwest = { version = "0.11.11", features = ["json"] }
