--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ openssl = "0.10.41"
 rand = "0.8.5"
 reqwest = { version = "0.11.11", features = ["json"] }
 serde = { version = "1.0.144", features = ["derive"] }
-tokio = { version = "1.23.0", features = ["full", "tracing"] }
+tokio = { version = "1.23.0", features = ["full", "tracing", "fs"] }
 tracing = { version = "0.1.37", features = ["max_level_debug", "release_max_level_warn"] }
 tracing-subscriber = "0.3.16"
 tracing-test = "0.2.3"
