--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ bytes = "1.2.1"
 clap = { version = "4.0.32", features = ["derive"] }
 console-subscriber = "0.1.8"
 futures = "0.3.24"
+home = "0.5.4"
 igd = "0.12.0"
 local-ip-address = "0.5.1"
 openssl = "0.10.41"
