--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.61"
+async-trait = "0.1.66"
 bendy = { version="0.4.0-beta.2",features = ["std", "serde"] }
 bincode = "1.3.3"
 clap = { version = "4.0.32", features = ["derive"] }
